# calleen

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_call.rs  custom_retry.rs  error_handling.rs  rate_limiting.rs  retry_strategies.rs
src/: client.rs  error.rs  lib.rs  metadata.rs  rate_limit.rs  response.rs  retry.rs
tests/: integration_tests.rs
