[package]
name = "calleen"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "Alex Hansen <alex@alex-hansen.com>"
description = "Robust HTTP request library for those who don't like getting unnecessarily paged while on-call.""

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["time"] }
http = "1.0"
rand = "0.8"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
